# AKMLib

./: .gitattributes  AKMLib.sln  README.md
.devcontainer/: Dockerfile
AKMCommon/: Class1.cs
AKMCommon/Enum/: AkmEvent.cs  AkmStatus.cs
AKMCommon/Struct/: AkmCommand.cs  AkmConfigParams.cs  AkmConfiguration.cs  AkmDataReceivedEventArgs.cs  AkmProcessCtx.cs
AKMInterface/: Class1.cs  ICLibCalls.cs  IDecryptedFrame.cs  IEncryptedFrame.cs  IKeyFactory.cs
AKMLib.NET/: .gitattributes  AKMLib.sln
AKMLib.NET/AKMInterface/: AKMInterface.csproj  ICLibCalls.cs  ICryptography.cs  IKey.cs
AKMLib.NET/AKMLogic/: AKMLogic.csproj  AkmCrypto.cs  AkmKey.cs  AkmKeyFactory.cs  AkmSenderManager.cs  AkmSetup.cs  Receiver.cs  Sender.cs
AKMLib.NET/AKMWorkerService/: AKMWorkerService.csproj  AkmRelationshipPool.cs  AutomatedTestingSettings.cs  Program.cs  Worker.cs
AKMLib.NET/AKM_Tests/: AKMRelationship_Tests.cs  AKM_Tests.csproj  AkmCrypo_Tests.cs  AkmFrames_Tests.cs  AkmKeyFactory_Tests.cs  AkmKey_Tests.cs  appsettings.json
AKMLogic/: AKMLogic.csproj  AkmCLibCall.cs  AkmDecryptedFrame.cs  AkmEncryptedFrame.cs  AkmRelationship.cs  Class1.cs
AKMWorkerService/: AutomatedTestingSettings.cs  akm.cs
AkmAutomatedTestClient/: AkmAutomatedTestClient.csproj  AutomatedTestingSettings.cs  Program.cs
libakmc/: CMakeLists.txt
libakmc/inc/: akm.h.in
libakmc/src/: addr_list.c  addr_list.h  akm.c  akm_core.c  akm_core.h  akm_internal.h  bytevector.c  bytevector.h  endianness.c  endianness.h  flagset.c  flagset.h  sha256.c  sha256.h  utilities.c  utilities.h
libakmc/test/: testn.cpp
(+11 files in other folders)
